--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "2"
 services:
     python:
       build: ./conf/python
+      depends_on:
+          - postgresql
       working_dir: /app/web
       hostname: "${PROJECT_NAME}_django"
       container_name: "${PROJECT_NAME}_django"
@@ -13,8 +15,8 @@ services:
         - ./src:/app
       entrypoint: /app/postinstall.sh ${REQUERIMENTS_FILE}
       links:
-        - postgresql:postgres
-        - redis:redis
+        - postgresql
+        - redis
       environment:
         - "DJANGO_SETTINGS_MODULE=${ENVIRONMENT_SETTINGS}"
 
@@ -23,9 +25,9 @@ services:
       hostname: "${PROJECT_NAME}_db"
       container_name: "${PROJECT_NAME}_db"
       environment:
-        POSTGRES_PASSWORD: "${DB_PASSWORD}"
-        POSTGRES_DB: "${DB_NAME}"
-        POSTGRES_USER: "${DB_USER}"
+          POSTGRES_PASSWORD: "${DB_PASSWORD}"
+          POSTGRES_USER: "${DB_USER}"
+          POSTGRES_DB: "${DB_NAME}"
       volumes_from:
         - data
 
@@ -44,10 +46,12 @@ services:
 
     pg-admin:
         image: fenglc/pgadmin4
+        depends_on:
+          - postgresql
         hostname: "${PROJECT_NAME}_db_admin"
         container_name: "${PROJECT_NAME}_db_admin"
         ports:
-            - 5050:5050
+            - 5051:5050
         links:
             - postgresql:postgres
         volumes:
